# webview-flask

./: Makefile  pyproject.toml  readme.md
src/: app.py
src/webview_flask/: main.py
