[tool.poetry]
name = "webview-flask"
version = "0.1.0"
description = "flask app with webview"
authors = ["Sander van Dragt <sander@vandragt.com>"]
readme = "README.md"
packages = [{include = "webview_flask"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12" #pyinstaller
Flask = "^2.3.2"
pywebview = "^4.1"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
vext = "^0.7.6"
vext-gi = "^0.7.4"
pyinstaller = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
